// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextSmall renders default h1 1`] = `
.c0 {
  font-size: 15px;
  line-height: 22px;
  font-family: GTCinetype-Light;
  margin-bottom: 12px;
}

<p
  className="c0"
>
  Title
</p>
`;

exports[`TextSmall renders h1 with custom color 1`] = `
.c0 {
  font-size: 15px;
  line-height: 22px;
  font-family: GTCinetype-Light;
  margin-bottom: 12px;
  color: green;
}

<p
  className="c0"
  color="green"
>
  Title
</p>
`;
